# roommate-finder

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml  middleware.ts  next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
app/: globals.css  layout.tsx  page.tsx
app/_schemas/: profile.ts  property.ts  room.ts  roommate.ts
app/actions/: auth.ts  profile.ts  property.ts  room.ts  user.ts  (+2 more)
components/: ButtonClipboard.tsx  Header.tsx  Logo.tsx  NavMenu.tsx  SearchBar.tsx  ThemeToggle.tsx  Toast.tsx  user-agreement.tsx
db/: .gitignore  docker-compose.pgadmin.yml
providers/: ThemeProvider.tsx  ymap-provider.tsx
recsys/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  schema.prisma
recsys/assets/: classes.plantuml  packages.plantuml
recsys/scripts/: prestart.sh  uml.sh
recsys/src/: settings.py
recsys/src/fake_data/: __main__.py  plombery.db
recsys/src/fake_data/data/: city.json  metro.json  profile_bio.json  text.py  university.json
recsys/src/model/: __main__.py  plombery.db  plot.py  preprocesor.py
recsys/src/model/dataset/: example.json  property.json  roommate.json
recsys/src/queries/: enums.sql
recsys/src/scheduler/: __main__.py
recsys/src/scheduler/src/: generate_recommendations.py
recsys/views/public/: property_recommendations_view.sql  roommate_recommendations_view.sql
scripts/: supabase.generate-types.sh
types/: database.table.types.ts  database.types.ts  database.types.zod.ts
utlils/: convert.ts
(+91 files in other folders)
